// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gin.sql > line 8 1`] = `
[
  "create table gin_test_tbl(i int4[]) with (autovacuum_enabled = off)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 63,
                      "names": [
                        {
                          "String": {
                            "sval": "off",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "autovacuum_enabled",
                  "location": 42,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "gin_test_tbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "i",
                  "is_local": true,
                  "location": 26,
                  "typeName": {
                    "arrayBounds": [
                      {
                        "Integer": {},
                      },
                    ],
                    "location": 28,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 14 1`] = `
[
  "select gin_clean_pending_list('gin_test_idx')>10 as many",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "many",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 30,
                                "sval": {
                                  "sval": "gin_test_idx",
                                },
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "gin_clean_pending_list",
                              },
                            },
                          ],
                          "location": 7,
                        },
                      },
                      "location": 45,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 10,
                          },
                          "location": 46,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 14 2`] = `
[
  " -- flush the fastupdate buffers

insert into gin_test_tbl select array[3, 1, g] from generate_series(1, 1000) g",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 46,
              "relname": "gin_test_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "g",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 102,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1000,
                                        },
                                        "location": 105,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 86,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 66,
                      "val": {
                        "A_ArrayExpr": {
                          "elements": [
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 3,
                                },
                                "location": 72,
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 1,
                                },
                                "location": 75,
                              },
                            },
                            {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "g",
                                    },
                                  },
                                ],
                                "location": 78,
                              },
                            },
                          ],
                          "location": 66,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 18 1`] = `
[
  "vacuum gin_test_tbl",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 7,
                    "relname": "gin_test_tbl",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 18 2`] = `
[
  " -- flush the fastupdate buffers

select gin_clean_pending_list('gin_test_idx')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 41,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 64,
                            "sval": {
                              "sval": "gin_test_idx",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "gin_clean_pending_list",
                          },
                        },
                      ],
                      "location": 41,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 20 1`] = `
[
  " -- nothing to flush

-- Test vacuuming
delete from gin_test_tbl where i @> array[2]",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 52,
              "relname": "gin_test_tbl",
              "relpersistence": "p",
            },
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "i",
                        },
                      },
                    ],
                    "location": 71,
                  },
                },
                "location": 73,
                "name": [
                  {
                    "String": {
                      "sval": "@>",
                    },
                  },
                ],
                "rexpr": {
                  "A_ArrayExpr": {
                    "elements": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 82,
                        },
                      },
                    ],
                    "location": 76,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 30 1`] = `
[
  "alter index gin_test_idx set (fastupdate = off)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "List": {
                      "items": [
                        {
                          "DefElem": {
                            "arg": {
                              "TypeName": {
                                "location": 43,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "off",
                                    },
                                  },
                                ],
                                "typemod": -1,
                              },
                            },
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "fastupdate",
                            "location": 30,
                          },
                        },
                      ],
                    },
                  },
                  "subtype": "AT_SetRelOptions",
                },
              },
            ],
            "objtype": "OBJECT_INDEX",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "gin_test_idx",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 39 1`] = `
[
  "explain (costs off)
select count(*) from gin_test_tbl where i @> array[1, 999]",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 41,
                      "relname": "gin_test_tbl",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "FuncCall": {
                          "agg_star": true,
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "i",
                            },
                          },
                        ],
                        "location": 60,
                      },
                    },
                    "location": 62,
                    "name": [
                      {
                        "String": {
                          "sval": "@>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_ArrayExpr": {
                        "elements": [
                          {
                            "A_Const": {
                              "ival": {
                                "ival": 1,
                              },
                              "location": 71,
                            },
                          },
                          {
                            "A_Const": {
                              "ival": {
                                "ival": 999,
                              },
                              "location": 74,
                            },
                          },
                        ],
                        "location": 65,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 42 1`] = `
[
  "select count(*) from gin_test_tbl where i @> array[1, 999]",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 21,
                  "relname": "gin_test_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "agg_star": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "i",
                        },
                      },
                    ],
                    "location": 40,
                  },
                },
                "location": 42,
                "name": [
                  {
                    "String": {
                      "sval": "@>",
                    },
                  },
                ],
                "rexpr": {
                  "A_ArrayExpr": {
                    "elements": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 51,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 999,
                          },
                          "location": 54,
                        },
                      },
                    ],
                    "location": 45,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 45 1`] = `
[
  "set gin_fuzzy_search_limit = 1000",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "ival": {
                    "ival": 1000,
                  },
                  "location": 29,
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "gin_fuzzy_search_limit",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 47 1`] = `
[
  "explain (costs off)
select count(*) > 0 as ok from gin_test_tbl where i @> array[1]",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 51,
                      "relname": "gin_test_tbl",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "name": "ok",
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "FuncCall": {
                              "agg_star": true,
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "count",
                                  },
                                },
                              ],
                              "location": 27,
                            },
                          },
                          "location": 36,
                          "name": [
                            {
                              "String": {
                                "sval": ">",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {},
                              "location": 38,
                            },
                          },
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "i",
                            },
                          },
                        ],
                        "location": 70,
                      },
                    },
                    "location": 72,
                    "name": [
                      {
                        "String": {
                          "sval": "@>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_ArrayExpr": {
                        "elements": [
                          {
                            "A_Const": {
                              "ival": {
                                "ival": 1,
                              },
                              "location": 81,
                            },
                          },
                        ],
                        "location": 75,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 50 1`] = `
[
  "select count(*) > 0 as ok from gin_test_tbl where i @> array[1]",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 31,
                  "relname": "gin_test_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "ok",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "FuncCall": {
                          "agg_star": true,
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count",
                              },
                            },
                          ],
                          "location": 7,
                        },
                      },
                      "location": 16,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {},
                          "location": 18,
                        },
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "i",
                        },
                      },
                    ],
                    "location": 50,
                  },
                },
                "location": 52,
                "name": [
                  {
                    "String": {
                      "sval": "@>",
                    },
                  },
                ],
                "rexpr": {
                  "A_ArrayExpr": {
                    "elements": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 61,
                        },
                      },
                    ],
                    "location": 55,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 52 1`] = `
[
  "reset gin_fuzzy_search_limit",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "gin_fuzzy_search_limit",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 55 1`] = `
[
  "create temp table t_gin_test_tbl(i int4[], j int4[])",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 18,
              "relname": "t_gin_test_tbl",
              "relpersistence": "t",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "i",
                  "is_local": true,
                  "location": 33,
                  "typeName": {
                    "arrayBounds": [
                      {
                        "Integer": {},
                      },
                    ],
                    "location": 35,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "j",
                  "is_local": true,
                  "location": 43,
                  "typeName": {
                    "arrayBounds": [
                      {
                        "Integer": {},
                      },
                    ],
                    "location": 45,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 58 1`] = `
[
  "values
  (null,    null),
  ('{}',    null),
  ('{1}',   null),
  ('{1,2}', null),
  (null,    '{}'),
  (null,    '{10}'),
  ('{1,2}', '{10}'),
  ('{2}',   '{10}'),
  ('{1,3}', '{}'),
  ('{1,1}', '{10}')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "valuesLists": [
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "isnull": true,
                        "location": 10,
                      },
                    },
                    {
                      "A_Const": {
                        "isnull": true,
                        "location": 19,
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "location": 29,
                        "sval": {
                          "sval": "{}",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "isnull": true,
                        "location": 38,
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "location": 48,
                        "sval": {
                          "sval": "{1}",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "isnull": true,
                        "location": 57,
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "location": 67,
                        "sval": {
                          "sval": "{1,2}",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "isnull": true,
                        "location": 76,
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "isnull": true,
                        "location": 86,
                      },
                    },
                    {
                      "A_Const": {
                        "location": 95,
                        "sval": {
                          "sval": "{}",
                        },
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "isnull": true,
                        "location": 105,
                      },
                    },
                    {
                      "A_Const": {
                        "location": 114,
                        "sval": {
                          "sval": "{10}",
                        },
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "location": 126,
                        "sval": {
                          "sval": "{1,2}",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "location": 135,
                        "sval": {
                          "sval": "{10}",
                        },
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "location": 147,
                        "sval": {
                          "sval": "{2}",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "location": 156,
                        "sval": {
                          "sval": "{10}",
                        },
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "location": 168,
                        "sval": {
                          "sval": "{1,3}",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "location": 177,
                        "sval": {
                          "sval": "{}",
                        },
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "location": 187,
                        "sval": {
                          "sval": "{1,1}",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "location": 196,
                        "sval": {
                          "sval": "{10}",
                        },
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 70 1`] = `
[
  "set enable_seqscan = off",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 21,
                  "sval": {
                    "sval": "off",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "enable_seqscan",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 72 1`] = `
[
  "select * from t_gin_test_tbl where array[0] <@ i",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "t_gin_test_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "A_ArrayExpr": {
                    "elements": [
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 41,
                        },
                      },
                    ],
                    "location": 35,
                  },
                },
                "location": 44,
                "name": [
                  {
                    "String": {
                      "sval": "<@",
                    },
                  },
                ],
                "rexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "i",
                        },
                      },
                    ],
                    "location": 47,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 76 1`] = `
[
  "explain (costs off)
select * from t_gin_test_tbl where i @> '{}'",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 34,
                      "relname": "t_gin_test_tbl",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "i",
                            },
                          },
                        ],
                        "location": 55,
                      },
                    },
                    "location": 57,
                    "name": [
                      {
                        "String": {
                          "sval": "@>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 60,
                        "sval": {
                          "sval": "{}",
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 80 1`] = `
[
  "create function explain_query_json(query_sql text)
returns table (explain_line json)
language plpgsql as
$$
begin
  set enable_seqscan = off;
  set enable_bitmapscan = on;
  return query execute 'EXPLAIN (ANALYZE, FORMAT json) ' || query_sql;
end;
$$",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "explain_query_json",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "plpgsql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 85,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
begin
  set enable_seqscan = off;
  set enable_bitmapscan = on;
  return query execute 'EXPLAIN (ANALYZE, FORMAT json) ' || query_sql;
end;
",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 102,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 45,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                  "name": "query_sql",
                },
              },
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 79,
                    "names": [
                      {
                        "String": {
                          "sval": "json",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_TABLE",
                  "name": "explain_line",
                },
              },
            ],
            "returnType": {
              "location": 59,
              "names": [
                {
                  "String": {
                    "sval": "json",
                  },
                },
              ],
              "setof": true,
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 91 1`] = `
[
  "create function execute_text_query_index(query_sql text)
returns setof text
language plpgsql
as
$$
begin
  set enable_seqscan = off;
  set enable_bitmapscan = on;
  return query execute query_sql;
end;
$$",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "execute_text_query_index",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "plpgsql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 76,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
begin
  set enable_seqscan = off;
  set enable_bitmapscan = on;
  return query execute query_sql;
end;
",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 93,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 51,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                  "name": "query_sql",
                },
              },
            ],
            "returnType": {
              "location": 71,
              "names": [
                {
                  "String": {
                    "sval": "text",
                  },
                },
              ],
              "setof": true,
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 103 1`] = `
[
  "create function execute_text_query_heap(query_sql text)
returns setof text
language plpgsql
as
$$
begin
  set enable_seqscan = on;
  set enable_bitmapscan = off;
  return query execute query_sql;
end;
$$",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "execute_text_query_heap",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "plpgsql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 75,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
begin
  set enable_seqscan = on;
  set enable_bitmapscan = off;
  return query execute query_sql;
end;
",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 92,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 50,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                  "name": "query_sql",
                },
              },
            ],
            "returnType": {
              "location": 70,
              "names": [
                {
                  "String": {
                    "sval": "text",
                  },
                },
              ],
              "setof": true,
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 116 1`] = `
[
  "select
  query,
  js->0->'Plan'->'Plans'->0->'Actual Rows' as "return by index",
  js->0->'Plan'->'Rows Removed by Index Recheck' as "removed by recheck",
  (res_index = res_heap) as "match"
from
  (values
    ($$ i @> '{}' $$),
    ($$ j @> '{}' $$),
    ($$ i @> '{}' and j @> '{}' $$),
    ($$ i @> '{1}' $$),
    ($$ i @> '{1}' and j @> '{}' $$),
    ($$ i @> '{1}' and i @> '{}' and j @> '{}' $$),
    ($$ j @> '{10}' $$),
    ($$ j @> '{10}' and i @> '{}' $$),
    ($$ j @> '{10}' and j @> '{}' and i @> '{}' $$),
    ($$ i @> '{1}' and j @> '{10}' $$)
  ) q(query),
  lateral explain_query_json($$select * from t_gin_test_tbl where $$ || query) js,
  lateral execute_text_query_index($$select string_agg((i, j)::text, ' ') from t_gin_test_tbl where $$ || query) res_index,
  lateral execute_text_query_heap($$select string_agg((i, j)::text, ' ') from t_gin_test_tbl where $$ || query) res_heap",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "q",
                    "colnames": [
                      {
                        "String": {
                          "sval": "query",
                        },
                      },
                    ],
                  },
                  "subquery": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "valuesLists": [
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 211,
                                  "sval": {
                                    "sval": " i @> '{}' ",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 234,
                                  "sval": {
                                    "sval": " j @> '{}' ",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 257,
                                  "sval": {
                                    "sval": " i @> '{}' and j @> '{}' ",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 294,
                                  "sval": {
                                    "sval": " i @> '{1}' ",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 318,
                                  "sval": {
                                    "sval": " i @> '{1}' and j @> '{}' ",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 356,
                                  "sval": {
                                    "sval": " i @> '{1}' and i @> '{}' and j @> '{}' ",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 408,
                                  "sval": {
                                    "sval": " j @> '{10}' ",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 433,
                                  "sval": {
                                    "sval": " j @> '{10}' and i @> '{}' ",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 472,
                                  "sval": {
                                    "sval": " j @> '{10}' and j @> '{}' and i @> '{}' ",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 525,
                                  "sval": {
                                    "sval": " i @> '{1}' and j @> '{10}' ",
                                  },
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              },
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "js",
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Expr": {
                                    "kind": "AEXPR_OP",
                                    "lexpr": {
                                      "A_Const": {
                                        "location": 602,
                                        "sval": {
                                          "sval": "select * from t_gin_test_tbl where ",
                                        },
                                      },
                                    },
                                    "location": 642,
                                    "name": [
                                      {
                                        "String": {
                                          "sval": "||",
                                        },
                                      },
                                    ],
                                    "rexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "query",
                                            },
                                          },
                                        ],
                                        "location": 645,
                                      },
                                    },
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "explain_query_json",
                                  },
                                },
                              ],
                              "location": 583,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                  "lateral": true,
                },
              },
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "res_index",
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Expr": {
                                    "kind": "AEXPR_OP",
                                    "lexpr": {
                                      "A_Const": {
                                        "location": 691,
                                        "sval": {
                                          "sval": "select string_agg((i, j)::text, ' ') from t_gin_test_tbl where ",
                                        },
                                      },
                                    },
                                    "location": 759,
                                    "name": [
                                      {
                                        "String": {
                                          "sval": "||",
                                        },
                                      },
                                    ],
                                    "rexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "query",
                                            },
                                          },
                                        ],
                                        "location": 762,
                                      },
                                    },
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "execute_text_query_index",
                                  },
                                },
                              ],
                              "location": 666,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                  "lateral": true,
                },
              },
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "res_heap",
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Expr": {
                                    "kind": "AEXPR_OP",
                                    "lexpr": {
                                      "A_Const": {
                                        "location": 814,
                                        "sval": {
                                          "sval": "select string_agg((i, j)::text, ' ') from t_gin_test_tbl where ",
                                        },
                                      },
                                    },
                                    "location": 882,
                                    "name": [
                                      {
                                        "String": {
                                          "sval": "||",
                                        },
                                      },
                                    ],
                                    "rexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "query",
                                            },
                                          },
                                        ],
                                        "location": 885,
                                      },
                                    },
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "execute_text_query_heap",
                                  },
                                },
                              ],
                              "location": 790,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                  "lateral": true,
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 9,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "query",
                          },
                        },
                      ],
                      "location": 9,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 18,
                  "name": "return by index",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "A_Expr": {
                                  "kind": "AEXPR_OP",
                                  "lexpr": {
                                    "A_Expr": {
                                      "kind": "AEXPR_OP",
                                      "lexpr": {
                                        "ColumnRef": {
                                          "fields": [
                                            {
                                              "String": {
                                                "sval": "js",
                                              },
                                            },
                                          ],
                                          "location": 18,
                                        },
                                      },
                                      "location": 20,
                                      "name": [
                                        {
                                          "String": {
                                            "sval": "->",
                                          },
                                        },
                                      ],
                                      "rexpr": {
                                        "A_Const": {
                                          "ival": {},
                                          "location": 22,
                                        },
                                      },
                                    },
                                  },
                                  "location": 23,
                                  "name": [
                                    {
                                      "String": {
                                        "sval": "->",
                                      },
                                    },
                                  ],
                                  "rexpr": {
                                    "A_Const": {
                                      "location": 25,
                                      "sval": {
                                        "sval": "Plan",
                                      },
                                    },
                                  },
                                },
                              },
                              "location": 31,
                              "name": [
                                {
                                  "String": {
                                    "sval": "->",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "location": 33,
                                  "sval": {
                                    "sval": "Plans",
                                  },
                                },
                              },
                            },
                          },
                          "location": 40,
                          "name": [
                            {
                              "String": {
                                "sval": "->",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {},
                              "location": 42,
                            },
                          },
                        },
                      },
                      "location": 43,
                      "name": [
                        {
                          "String": {
                            "sval": "->",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 45,
                          "sval": {
                            "sval": "Actual Rows",
                          },
                        },
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 83,
                  "name": "removed by recheck",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "js",
                                      },
                                    },
                                  ],
                                  "location": 83,
                                },
                              },
                              "location": 85,
                              "name": [
                                {
                                  "String": {
                                    "sval": "->",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "ival": {},
                                  "location": 87,
                                },
                              },
                            },
                          },
                          "location": 88,
                          "name": [
                            {
                              "String": {
                                "sval": "->",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "location": 90,
                              "sval": {
                                "sval": "Plan",
                              },
                            },
                          },
                        },
                      },
                      "location": 96,
                      "name": [
                        {
                          "String": {
                            "sval": "->",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 98,
                          "sval": {
                            "sval": "Rows Removed by Index Recheck",
                          },
                        },
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 157,
                  "name": "match",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "res_index",
                              },
                            },
                          ],
                          "location": 158,
                        },
                      },
                      "location": 168,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "res_heap",
                              },
                            },
                          ],
                          "location": 170,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 138 1`] = `
[
  "reset enable_seqscan",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "enable_seqscan",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 142 1`] = `
[
  "insert into t_gin_test_tbl select array[1, g, g/10], array[2, g, g/10]
  from generate_series(1, 20000) g",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "t_gin_test_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "g",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 94,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 20000,
                                        },
                                        "location": 97,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 78,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 34,
                      "val": {
                        "A_ArrayExpr": {
                          "elements": [
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 1,
                                },
                                "location": 40,
                              },
                            },
                            {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "g",
                                    },
                                  },
                                ],
                                "location": 43,
                              },
                            },
                            {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "g",
                                        },
                                      },
                                    ],
                                    "location": 46,
                                  },
                                },
                                "location": 47,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "/",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 10,
                                    },
                                    "location": 48,
                                  },
                                },
                              },
                            },
                          ],
                          "location": 34,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 53,
                      "val": {
                        "A_ArrayExpr": {
                          "elements": [
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 2,
                                },
                                "location": 59,
                              },
                            },
                            {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "g",
                                    },
                                  },
                                ],
                                "location": 62,
                              },
                            },
                            {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "g",
                                        },
                                      },
                                    ],
                                    "location": 65,
                                  },
                                },
                                "location": 66,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "/",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 10,
                                    },
                                    "location": 67,
                                  },
                                },
                              },
                            },
                          ],
                          "location": 53,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 145 1`] = `
[
  "select gin_clean_pending_list('t_gin_test_tbl_i_j_idx') is not null",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "NullTest": {
                      "arg": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 30,
                                "sval": {
                                  "sval": "t_gin_test_tbl_i_j_idx",
                                },
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "gin_clean_pending_list",
                              },
                            },
                          ],
                          "location": 7,
                        },
                      },
                      "location": 56,
                      "nulltesttype": "IS_NOT_NULL",
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 147 1`] = `
[
  "analyze t_gin_test_tbl",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 8,
                    "relname": "t_gin_test_tbl",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 152 1`] = `
[
  "explain (costs off)
select count(*) from t_gin_test_tbl where j @> array[50]",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 41,
                      "relname": "t_gin_test_tbl",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "FuncCall": {
                          "agg_star": true,
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "j",
                            },
                          },
                        ],
                        "location": 62,
                      },
                    },
                    "location": 64,
                    "name": [
                      {
                        "String": {
                          "sval": "@>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_ArrayExpr": {
                        "elements": [
                          {
                            "A_Const": {
                              "ival": {
                                "ival": 50,
                              },
                              "location": 73,
                            },
                          },
                        ],
                        "location": 67,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 156 1`] = `
[
  "select count(*) from t_gin_test_tbl where j @> array[2]",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 21,
                  "relname": "t_gin_test_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "agg_star": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "j",
                        },
                      },
                    ],
                    "location": 42,
                  },
                },
                "location": 44,
                "name": [
                  {
                    "String": {
                      "sval": "@>",
                    },
                  },
                ],
                "rexpr": {
                  "A_ArrayExpr": {
                    "elements": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 53,
                        },
                      },
                    ],
                    "location": 47,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 159 1`] = `
[
  "select count(*) from t_gin_test_tbl where j @> '{}'::int[]",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 21,
                  "relname": "t_gin_test_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "agg_star": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "j",
                        },
                      },
                    ],
                    "location": 42,
                  },
                },
                "location": 44,
                "name": [
                  {
                    "String": {
                      "sval": "@>",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 47,
                        "sval": {
                          "sval": "{}",
                        },
                      },
                    },
                    "location": 51,
                    "typeName": {
                      "arrayBounds": [
                        {
                          "Integer": {},
                        },
                      ],
                      "location": 53,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 163 1`] = `
[
  "delete from t_gin_test_tbl where j @> array[2]",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "t_gin_test_tbl",
              "relpersistence": "p",
            },
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "j",
                        },
                      },
                    ],
                    "location": 33,
                  },
                },
                "location": 35,
                "name": [
                  {
                    "String": {
                      "sval": "@>",
                    },
                  },
                ],
                "rexpr": {
                  "A_ArrayExpr": {
                    "elements": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 44,
                        },
                      },
                    ],
                    "location": 38,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 173 1`] = `
[
  "drop table t_gin_test_tbl",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "t_gin_test_tbl",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`gin.sql > line 176 1`] = `
[
  "create unlogged table t_gin_test_tbl(i int4[], j int4[])",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 22,
              "relname": "t_gin_test_tbl",
              "relpersistence": "u",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "i",
                  "is_local": true,
                  "location": 37,
                  "typeName": {
                    "arrayBounds": [
                      {
                        "Integer": {},
                      },
                    ],
                    "location": 39,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "j",
                  "is_local": true,
                  "location": 47,
                  "typeName": {
                    "arrayBounds": [
                      {
                        "Integer": {},
                      },
                    ],
                    "location": 49,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
